--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
+        "echarts": "^4.6.0",
         "element-ui": "^2.13.0",
         "js-cookie": "2.2.0",
         "jsbarcode": "^3.11.0",
